# digitnet

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml  train.py  upload.py
checkpoints/lg/: model.ckpt  model.onnx  model.safetensors
checkpoints/md/: model.ckpt  model.onnx  model.safetensors
checkpoints/sm/: model.ckpt  model.onnx  model.safetensors
checkpoints/xl/: model.ckpt  model.onnx  model.safetensors
src/: __init__.py  model.py
src/digitnet/: __init__.py  emnistdm.py  mnistdm.py  model.py
