[project]
name = "digitnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=5.1.0",
    "huggingface-hub>=0.25.2",
    "lightning>=2.4.0",
    "torch>=2.4.1",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.4.3",
    "torchvision>=0.19.1",
    "tqdm>=4.66.5",
    "wandb>=0.18.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
